[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "megpy"
version = "2.0.0"
description = "megpy"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["MHD", "magnetic", "equilibrium", "toolkit", "fusion", "simulation",]
authors = [
  { name = "Garud Snoep", email = "gsnoep42@gmail.com" },
  { name = "Aaron Ho", email = "aaronkho@mit.edu" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.26.4",
  "scipy",
  "matplotlib",
  "xarray",
  "h5py",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/gsnoep/megpy"
"Bug Reports" = "https://github.com/gsnoep/megpy/issues"
"Source" = "https://github.com/gsnoep/megpy"

[project.scripts]
megpy = "megpy.cli:parse"
